--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Math"]
-	path = Math
-	url = https://gerrit.wikimedia.org/r/mediawiki/extensions/Math
+[submodule "MathJax"]
+	path = MathJax
+	url = https://github.com/mathjax/MathJax
